<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"

        android:background="@color/theme_color">
    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Help and FAQ"
        android:textSize="18sp"
        android:padding="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_3"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_4"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_4"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

</LinearLayout>
</ScrollView>