<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoo"

    tools:context=".LoginActivity">

  <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/logo"
        android:contentDescription="resQfood" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:elevation="5dp"
        android:padding="20dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="3dp"
            android:paddingRight="20dp"
            android:paddingBottom="3dp"
            android:text="Signup to Explore"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:ems="10"
            android:textSize="15sp"
            android:background="@drawable/border_signlogin"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_username"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Email"
            android:padding="12dp"
            android:ems="10"
            android:textSize="15sp"
            android:background="@drawable/border_signlogin"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"

            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/border_signlogin"
            android:textSize="15sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />


        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textViewOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="Organization Name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" /> <!-- Initially hidden -->

        <EditText
            android:id="@+id/editTextOrganization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:ems="10"
            android:textSize="15sp"
            android:background="@drawable/border_signlogin"
            android:hint="Enter organization name"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:visibility="gone" /> <!-- Initially hidden -->

        <EditText
            android:id="@+id/editTextContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:ems="10"
            android:textSize="15sp"
            android:hint=""
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:visibility="gone" />
        <Button
            android:id="@+id/buttonSignup"
            android:textColor="@color/buttoncolor"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:backgroundTint="#2CCDA7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/signup"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="Already have an account? Login"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>
